Fixed positioning error on mobile

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,6 +3,10 @@
     justify-content: $justify;
 }
 
+.open {
+    clip-path: circle(1300px at 120% -20%);
+}
+
 header {
     @include flex(space-between);
     font-family: $fontTsukushi;
@@ -18,8 +22,12 @@ header {
     .header-logo {
         font-family: 'Leckerli One', cursive;
         width: 20%;
+        height: 100%;
+        padding-left: 10px;
         a {
+            height: 100%;
             @include alignCenter();
+            display: inline-flex;
             justify-content: center;
             color: #fff;
             text-decoration: none;
@@ -39,24 +47,28 @@ header {
         }
     }
 
-    .open {
-        clip-path: circle(1100px at 100% -10%);
-    }
-
     nav {
         position: relative;
         width: 50vw;
         @media (max-width: 768px) {
             position: fixed;
+            left: 0;
+            right: 0;
+            top: 0;
             background: $blueColor;
             height: 100vh;
-            width: 100%;
-            clip-path: circle(90px at 110% -10%);
+            width: 100vw;
+            z-index: 1;
+            clip-path: circle(90px at 120% -20%);
             transition: all 1s ease-out;
         }
         .nav-links {
             @include alignCenter();
             margin: 0;
+            width: 100%;
+            li {
+                cursor: pointer;
+            }
             li a {
                 text-decoration: none;
                 color: #fff;
@@ -74,10 +86,11 @@ header {
     .menu-trigger-wrapper {
         display: none;
         align-items: center;
-        width: 50px;
+        width: 50%;
         z-index: 2;
         @media (max-width: 768px) {
             display: flex;
+            justify-content: flex-end;
         }
         .menu-trigger,
         .menu-trigger span {
@@ -87,6 +100,7 @@ header {
         .menu-trigger {
             display: block;
             width: 40px;
+            margin-right: 15px;
             cursor: pointer; 
             span {
                 display: block;
